tests/models/enum/unnamed/i128/fail/alias.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(alias = "val")]
        i128
    ),
}
fn main() {}
