tests/models/enum/unnamed/i128/fail/alias.stderr
error: No support alias term on the unnamed field.
 --> tests/models/enum/unnamed/i128/fail/alias.rs:4:10
  |
4 |       Value(
  |  __________^
5 | |        #[field(alias = "val")]
6 | |         i128
7 | |     ),
  | |_____^
